- 添加飞行速度控制指令
- 更改部分命令提示
- 优化代码(也许吧)

- 去除jackson依赖，缩减打包大小